[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/entities/enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/attributes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/attributes/Healthbar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/overlap/enemy_detection_zone.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=15]
radius = 88.0
height = 160.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 2.0
height = 4.0

[sub_resource type="CircleShape2D" id=16]
radius = 229.965

[sub_resource type="AnimationNodeAnimation" id=106]
animation = "BloodflameMageDownIdle"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "BloodflameMageRightIdle"

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "BloodflameMageUpIdle"

[sub_resource type="AnimationNodeAnimation" id=101]
animation = "BloodflameMageLeftIdle"

[sub_resource type="AnimationNodeBlendSpace2D" id=107]
blend_point_0/node = SubResource( 106 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 99 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 100 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 101 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=102]
animation = "BloodflameMageDownRun"

[sub_resource type="AnimationNodeAnimation" id=103]
animation = "BloodflameMageRightRun"

[sub_resource type="AnimationNodeAnimation" id=104]
animation = "BloodflameMageUpRun"

[sub_resource type="AnimationNodeAnimation" id=105]
animation = "BloodflameMageLeftRun"

[sub_resource type="AnimationNodeBlendSpace2D" id=108]
blend_point_0/node = SubResource( 102 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 103 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 104 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 105 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=109]

[sub_resource type="AnimationNodeStateMachineTransition" id=110]

[sub_resource type="AnimationNodeStateMachine" id=111]
states/Idle/node = SubResource( 107 )
states/Idle/position = Vector2( 631, 64 )
states/Run/node = SubResource( 108 )
states/Run/position = Vector2( 393, 64 )
transitions = [ "Run", "Idle", SubResource( 109 ), "Idle", "Run", SubResource( 110 ) ]
start_node = "Idle"
graph_offset = Vector2( -46, -40 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=112]

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 32
script = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.25, 0.25 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.05, 0.05 )
animation = "run_left"
playing = true

[node name="Healthbar" parent="AnimatedSprite" instance=ExtResource( 5 )]
margin_left = -68.0
margin_top = 544.0
margin_right = 93.0
margin_bottom = 608.0
rect_scale = Vector2( 2, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="raycast_to_trail" type="RayCast2D" parent="."]
scale = Vector2( 2, 2 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 32
collide_with_areas = true

[node name="chase_timer" type="Timer" parent="."]
one_shot = true

[node name="enemy_detection_zone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="enemy_detection_zone" index="0"]
shape = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 111 )
parameters/playback = SubResource( 112 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="enemy_detection_zone"]
